fixed URL warning